; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_format.c_FLAC__format_get_max_rice_partition_order_from_blocksize_limited_max_and_predictor_order.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/libFLAC/extr_format.c_FLAC__format_get_max_rice_partition_order_from_blocksize_limited_max_and_predictor_order.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @FLAC__format_get_max_rice_partition_order_from_blocksize_limited_max_and_predictor_order(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  store i32 %8, i32* %7, align 4
  br label %9

9:                                                ; preds = %20, %3
  %10 = load i32, i32* %7, align 4
  %11 = icmp ugt i32 %10, 0
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %7, align 4
  %15 = lshr i32 %13, %14
  %16 = load i32, i32* %6, align 4
  %17 = icmp ule i32 %15, %16
  br label %18

18:                                               ; preds = %12, %9
  %19 = phi i1 [ false, %9 ], [ %17, %12 ]
  br i1 %19, label %20, label %23

20:                                               ; preds = %18
  %21 = load i32, i32* %7, align 4
  %22 = add i32 %21, -1
  store i32 %22, i32* %7, align 4
  br label %9

23:                                               ; preds = %18
  %24 = load i32, i32* %7, align 4
  %25 = icmp eq i32 %24, 0
  br i1 %25, label %26, label %30

26:                                               ; preds = %23
  %27 = load i32, i32* %5, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp uge i32 %27, %28
  br i1 %29, label %41, label %30

30:                                               ; preds = %26, %23
  %31 = load i32, i32* %7, align 4
  %32 = icmp ugt i32 %31, 0
  br i1 %32, label %33, label %39

33:                                               ; preds = %30
  %34 = load i32, i32* %5, align 4
  %35 = load i32, i32* %7, align 4
  %36 = lshr i32 %34, %35
  %37 = load i32, i32* %6, align 4
  %38 = icmp ugt i32 %36, %37
  br label %39

39:                                               ; preds = %33, %30
  %40 = phi i1 [ false, %30 ], [ %38, %33 ]
  br label %41

41:                                               ; preds = %39, %26
  %42 = phi i1 [ true, %26 ], [ %40, %39 ]
  %43 = zext i1 %42 to i32
  %44 = call i32 @FLAC__ASSERT(i32 %43)
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}

declare dso_local i32 @FLAC__ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
